--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink: /posts/:title/
 markdown: kramdown
 
 theme:
-  disqus_shortname: shantharamsk
+  disqus_shortname: shantharamshenoy-github-io
   
 
 sass:
